Adding colour code script

--- a/index.html
+++ b/index.html
@@ -31,54 +31,55 @@
 
     <div class="container">
     <section class = "time-block"> 
-      <div id = "9am" class= "row">   
+      <div id = "9" class= "row">   
         <p class = "hour col-1 "> 9am</p>
-        <textarea  class = "description col-8"></textarea>
+        <textarea class = "description col-8"></textarea>
         <button class = "saveBtn col-auto">🔒</button>
       </div>  
-      <div id = "10am" class= "row">   
+      <div id = "10" class= "row">   
         <p class = "hour col-1 "> 10am</p>
         <textarea  class = "description col-8"></textarea>
         <button class = "saveBtn col-auto">🔒</button>
       </div>  
-      <div id = "11am" class= "row">   
+      <div id = "11" class= "row">   
         <p class = "hour col-1 "> 11am</p>
         <textarea  class = "description col-8"></textarea>
         <button class = "saveBtn col-auto">🔒</button>
       </div>  
-      <div id = "12pm" class= "row">   
+      <div id = "12" class= "row">   
         <p class = "hour col-1 "> 12pm</p>
         <textarea  class = "description col-8"></textarea>
         <button class = "saveBtn col-auto">🔒</button>
       </div>  
-      <div id = "1pm" class= "row">   
+      <div id = "13" class= "row">   
         <p class = "hour col-1 "> 1pm</p>
         <textarea  class = "description col-8"></textarea>
         <button class = "saveBtn col-auto">🔒</button>
       </div>  
-      <div id = "2pm" class= "row">   
+      <div id = "14" class= "row">   
         <p class = "hour col-1 "> 2pm</p>
         <textarea  class = "description col-8"></textarea>
         <button class = "saveBtn col-auto">🔒</button>
       </div>  
-      <div id = "3pm" class= "row">   
+      <div id = "15" class= "row">   
         <p class = "hour col-1 "> 3pm</p>
         <textarea  class = "description col-8"></textarea>
         <button class = "saveBtn col-auto">🔒</button>
       </div>  
-      <div id = "4pm" class= "row">   
+      <div id = "16" class= "row">   
         <p class = "hour col-1 "> 4pm</p>
         <textarea  class = "description col-8"></textarea>
         <button class = "saveBtn col-auto">🔒</button>
       </div>  
-      <div id = "5pm" class= "row">   
+      <div id = "17" class= "row">   
         <p class = "hour col-1 "> 5pm</p>
         <textarea  class = "description col-8"></textarea>
         <button class = "saveBtn col-auto">🔒</button>
       </div>  
 
+
     </section>
-    
+
     
       </div>
     </div>
