Final working code

--- a/index.html
+++ b/index.html
@@ -33,54 +33,50 @@
     <section class = "time-block"> 
       <div id = "9" class= "row">   
         <p class = "hour col-1 "> 9am</p>
-        <textarea class = "description col-8"></textarea>
-        <button class = "saveBtn col-auto">🔒</button>
+        <textarea id = "nine" class = "description col-8"></textarea>
+        <button id = "btn9" class = "saveBtn col-auto">🔒</button>
       </div>  
       <div id = "10" class= "row">   
         <p class = "hour col-1 "> 10am</p>
-        <textarea  class = "description col-8"></textarea>
-        <button class = "saveBtn col-auto">🔒</button>
+        <textarea id = "ten" class = "description col-8"></textarea>
+        <button id = "btn10" class = "saveBtn col-auto">🔒</button>
       </div>  
       <div id = "11" class= "row">   
         <p class = "hour col-1 "> 11am</p>
-        <textarea  class = "description col-8"></textarea>
-        <button class = "saveBtn col-auto">🔒</button>
+        <textarea  id = "eleven" class = "description col-8"></textarea>
+        <button id = "btn11" class = "saveBtn col-auto">🔒</button>
       </div>  
       <div id = "12" class= "row">   
         <p class = "hour col-1 "> 12pm</p>
-        <textarea  class = "description col-8"></textarea>
-        <button class = "saveBtn col-auto">🔒</button>
+        <textarea id = "twelve"  class = "description col-8"></textarea>
+        <button id = "btn12" class = "saveBtn col-auto">🔒</button>
       </div>  
       <div id = "13" class= "row">   
         <p class = "hour col-1 "> 1pm</p>
-        <textarea  class = "description col-8"></textarea>
-        <button class = "saveBtn col-auto">🔒</button>
+        <textarea  id = "thirteen" class = "description col-8"></textarea>
+        <button id = "btn13" class = "saveBtn col-auto">🔒</button>
       </div>  
       <div id = "14" class= "row">   
         <p class = "hour col-1 "> 2pm</p>
-        <textarea  class = "description col-8"></textarea>
-        <button class = "saveBtn col-auto">🔒</button>
+        <textarea  id = "fourteen" class = "description col-8"></textarea>
+        <button id = "btn14" class = "saveBtn col-auto">🔒</button>
       </div>  
       <div id = "15" class= "row">   
         <p class = "hour col-1 "> 3pm</p>
-        <textarea  class = "description col-8"></textarea>
-        <button class = "saveBtn col-auto">🔒</button>
+        <textarea id = "fifteen"  class = "description col-8"></textarea>
+        <button id = "btn15" class = "saveBtn col-auto">🔒</button>
       </div>  
       <div id = "16" class= "row">   
         <p class = "hour col-1 "> 4pm</p>
-        <textarea  class = "description col-8"></textarea>
-        <button class = "saveBtn col-auto">🔒</button>
+        <textarea id = "sixteen"  class = "description col-8"></textarea>
+        <button id = "btn16" class = "saveBtn col-auto">🔒</button>
       </div>  
       <div id = "17" class= "row">   
         <p class = "hour col-1 "> 5pm</p>
-        <textarea  class = "description col-8"></textarea>
-        <button class = "saveBtn col-auto">🔒</button>
+        <textarea  id = "seventeen" class = "description col-8"></textarea>
+        <button id = "btn17" class = "saveBtn col-auto">🔒</button>
       </div>  
-
-
     </section>
-
-    
       </div>
     </div>
 <footer></footer>
